update for epoll

--- a/tools/tcpForward/makefile
+++ b/tools/tcpForward/makefile
@@ -1,6 +1,8 @@
-all : single.out
+all : single.out single.dbg
 single.out : singleThread.cpp
 	gcc -DRUN -O2 -o single.out singleThread.cpp -I../include -lpthread
 
+single.dbg : singleThread.cpp
+	gcc -DDBG -o $@ -I../include -lpthread $^ 
 clean : 
-	rm single.out
+	rm single.dbg single.out
