update wait for epoll

--- a/tools/sockServer/makefile
+++ b/tools/sockServer/makefile
@@ -2,7 +2,7 @@ all: single.out
 
 
 single.out : singleThread.cpp
-	gcc -DREL -o single.out singleThread.cpp -I../include -lpthread
+	gcc -O3 -DREL -o single.out singleThread.cpp -I../include -lpthread
 
 clean:
 	rm single.out
