add hostdb and ipsyn

--- a/tools/sockServer/makefile
+++ b/tools/sockServer/makefile
@@ -2,7 +2,7 @@ all: single.out
 
 
 single.out : singleThread.cpp
-	gcc -O3 -DREL -o single.out singleThread.cpp -I../include -lpthread
+	g++ -O3 -DTMP -DREL -o single.out singleThread.cpp -I../include -lpthread -lleveldb -std=c++11
 
 clean:
 	rm single.out
