--- a/tools/tcpForward/makefile
+++ b/tools/tcpForward/makefile
@@ -1,5 +1,5 @@
 all : local.out single.out
-local.out : localThread.cpp
+local.out : singleThread.cpp
 	g++ -DRUN -DLOCAL -O2 -o $@ $^ -I../include -lpthread -lleveldb -std=c++11
 
 single.out : singleThread.cpp
